EditText input type

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -23,6 +23,7 @@
         android:layout_height="72dp"
         android:layout_marginTop="16dp"
         android:textSize="24sp"
+        android:inputType="textPassword"
         android:hint="@string/new_password"
         app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
         app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />
@@ -33,6 +34,7 @@
         android:layout_height="72dp"
         android:layout_marginTop="16dp"
         android:textSize="24sp"
+        android:inputType="textPassword"
         android:hint="@string/type_again"
         app:layout_constraintStart_toStartOf="@+id/etNewPassword"
         app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />
